--- a/locales/en.json
+++ b/locales/en.json
@@ -48,6 +48,10 @@
     }
   },
   "webpanel": {
+    "raffle-type": "Raffle type",
+    "raffle-type-keywords": "Only keyword",
+    "raffle-type-tickets": "With tickets",
+    "raffle-tickets-range": "Tickets range",
     "video_id": "Video ID",
     "highlights": "Highlights",
     "cooldown-quiet-header": "Show cooldown message",
@@ -295,7 +299,12 @@
         "followersAndProduct": "(sender), raffle is opened o `(product)`. To enter type !(keyword). Only followers can participate",
         "subscribers": "(sender), raffle is opened. To enter type !(keyword). Only subscribers can participate",
         "subscribersAndProduct": "(sender), raffle is opened o `(product)`. To enter type !(keyword). Only subscribers can participate",
-        "none": "(sender), raffle is opened. To enter type !(keyword). Everyone can participate"
+        "everyoneTickets": "(sender), ticket raffle is opened. To enter type !(keyword) <(min)-(max)>. Everyone can participate",
+        "everyoneAndProductTickets": "(sender), ticket raffle is opened for `(product)`. To enter type !(keyword) <(min)-(max)>. Everyone can participate",
+        "followersTickets": "(sender), ticket raffle is opened. To enter type !(keyword) <(min)-(max)>. Only followers can participate",
+        "followersAndProductTickets": "(sender), ticket raffle is opened o `(product)`. To enter type !(keyword) <(min)-(max)>. Only followers can participate",
+        "subscribersTickets": "(sender), ticket raffle is opened. To enter type !(keyword) <(min)-(max)>. Only subscribers can participate",
+        "subscribersAndProductTickets": "(sender), ticket raffle is opened o `(product)`. To enter type !(keyword) <(min)-(max)>. Only subscribers can participate"
       },
       "closed": "(sender) Raffle is closed, but winner is not picked yet!",
       "notRunning": "(sender) No raffle is currently opened!"
@@ -311,7 +320,12 @@
         "followersAndProduct": "New raffle is opened o `(product)`. To enter type !(keyword). Only followers can participate",
         "subscribers": "New raffle is opened. To enter type !(keyword). Only subscribers can participate",
         "subscribersAndProduct": "New raffle is opened o `(product)`. To enter type !(keyword). Only subscribers can participate",
-        "none": "New raffle is opened. To enter type !(keyword). Everyone can participate"
+        "everyoneTickets": "New raffle is opened. To enter type !(keyword) <(min)-(max)>. Everyone can participate",
+        "everyoneAndProductTickets": "New ticket raffle is opened for `(product)`. To enter type !(keyword) <(min)-(max)>. Everyone can participate",
+        "followersTickets": "New ticket raffle is opened. To enter type !(keyword) <(min)-(max)>. Only followers can participate",
+        "followersAndProductTickets": "New ticket raffle is opened o `(product)`. To enter type !(keyword) <(min)-(max)>. Only followers can participate",
+        "subscribersTickets": "New ticket raffle is opened. To enter type !(keyword) <(min)-(max)>. Only subscribers can participate",
+        "subscribersAndProductTickets": "New ticket raffle is opened o `(product)`. To enter type !(keyword) <(min)-(max)>. Only subscribers can participate"
       },
       "notice": {
         "everyone": "Raffle is currently running. To enter type !(keyword). Everyone can participate",
@@ -320,7 +334,12 @@
         "followersAndProduct": "Raffle is currently running o `(product)`. To enter type !(keyword). Only followers can participate",
         "subscribers": "Raffle is currently running. To enter type !(keyword). Only subscribers can participate",
         "subscribersAndProduct": "Raffle is currently running o `(product)`. To enter type !(keyword). Only subscribers can participate",
-        "none": "Raffle is currently running. To enter type !(keyword). Everyone can participate"
+        "everyoneTickets": "Ticket raffle is currently running. To enter type !(keyword) <(min)-(max)>. Everyone can participate",
+        "everyoneAndProductTickets": "Ticket raffle is currently running for `(product)`. To enter type !(keyword) <(min)-(max)>. Everyone can participate",
+        "followersTickets": "Ticket raffle is currently running. To enter type !(keyword) <(min)-(max)>. Only followers can participate",
+        "followersAndProductTickets": "Ticket raffle is currently running o `(product)`. To enter type !(keyword) <(min)-(max)>. Only followers can participate",
+        "subscribersTickets": "Ticket raffle is currently running. To enter type !(keyword) <(min)-(max)>. Only subscribers can participate",
+        "subscribersAndProductTickets": "Ticket raffle is currently running o `(product)`. To enter type !(keyword) <(min)-(max)>. Only subscribers can participate"
       }
     },
     "close": {
